--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,6 @@
         "jsx": "preserve",
         "incremental": true
     },
-    "include": [
-        "next-env.d.ts",
-        "**/*.ts",
-        "**/*.tsx",
-        "components/CustomHeader.tsx.old"
-    ],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
     "exclude": ["node_modules"]
 }
