--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.7.2",
+    "@supabase/supabase-js": "^2.26.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
@@ -22,5 +24,6 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5"
-  }
+  },
+  "packageManager": "yarn@3.6.0"
 }
